Bug 822983 - Map SVG graphic elements to accessibility API, r=tbsaunde, longsonr